--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -1,1 +1,75 @@
+## Description
+
+<p align="justify">
+  Nowadays, the vast amount of existing published research works creates major obstacles regarding the traditional knowledge discovery 
+  required by common research processes and other relevant tasks. However, at the same time, the increased popularity of the Open Science movement, makes 
+  large amounts of scholarly metadata available through open Scholarly Knowledge Graphs (SKGs), paving the way for reliable research impact assessment 
+  processes, that can alleviate the aforementioned issue. The main objective of the tutorial is to inform and educate the audience about the opportunities 
+  and challenges that open SKGs create in the field of research impact assessment, presenting the respective state-of-the-art and highlighting common pitfalls.
+</p>
+
+## Impact Assessment in SKGs
+
+<p align="justify">
+  The availability of scholarly metadata cannot by itself guarantee the reliability of research impact procedures. 
+  Since the landscape of the available measures for impact assessment is extremely crowded, with many of them sharing 
+  similar key concepts and ideas, it is really difficult for researchers, developers, and other interested stakeholders 
+  to identify which are the strengths and weaknesses of each approach and which measures are more suitable for the impact 
+  assessment services they target to offer. This is extremely important since it is now widely accepted that research impact 
+  is a complex notion, having many, and not always correlated, aspects, and that different measures capture 
+  impact from diverse perspectives, each of which could be more important in different applications. Hence the 
+  selection of the appropriate research impact measures should be done with caution. 
+</p>
+
+<p align="justify">
+  The main objective of the tutorial is to inform and educate the audience about the opportunities and challenges that open Scholarly 
+  Knowledge Graphs (SKGs) create in research impact assessment, presenting the respective state-of-the-art impact measures that can be 
+  calculated, analysing their strengths, weaknesses, and proper uses, and highlighting the most common pitfalls. Although the tutorial 
+  will discuss impact from various perspectives, the focus will be given on the different aspects of citation-based, scientific impact. 
+  The tutorial will be concluded with the demonstration of the use of different impact measures in practical real-world applications and 
+  the discussion of the current open challenges and the well-anticipated needs of the research community at large regarding reliable processes 
+  for impact assessment. 
+</p>
+
+## Tutorial Material
+
+1. Part A: <a href="">Introduction</a>
+  * History 
+  * Motivation and applications
+  * Open SKGs
+  * Multi-perspective impact assessment
+2. Part B: <a href="">Research impact assessment approaches</a>
+  * Background
+  * Classification of approaches
+  * Notable approaches
+  * Strengths and weaknesses
+3. Part C: <a href="">Aftermath</a>
+  * Demonstrating applications 
+  * Open research challenges 
+  * Conclusions 
+
+## Video Teaser
+
+[![Impact Assessment Tutorial Teaser](https://img.youtube.com/vi/fq1VXLRs_A8/0.jpg)](https://www.youtube.com/watch?v=fq1VXLRs_A8)
+
+## Presenters
+
+### Thanasis Vergoulis 
+<p align="justify"><img src="img/vergoulis.png" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/>Thanasis Vergoulis is a Scientific Associate at IMSI, Athena Research Center in Greece. He received his diploma in Computer Engineering and Informatics from the Univ. 
+of Patras and his PhD in Computer Science from NTU of Athens, under the supervision of Prof. Timos Sellis. He has been involved in several EU and national ICT projects 
+related to big data, scientific data management, open science, and linked data. His research interests also involve bioinformatics, text mining & information retrieval 
+for scientific publications, and research analytics. He has served as a member of the program or organizing committee for several CS conferences and as a reviewer for 
+several top-tier journals. Finally, he has been teaching courses in undergraduate and postgraduate level in academic institutions in Greece and Cyprus.</p>
+
+### Dimitris Sacharidis 
+<p align="justify"><img src="img/dimsacharidis.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Dimitris Sacharidis is an assistant professor at the Web and Information Technologies lab at the Université Libre De Bruxelles (ULB). Prior to that he was an assistant 
+professor at the Technical University of Vienna, and a Marie Skłodowska Curie fellow at the “Athena” Research Center and at the Hong Kong University of Science and Technology. 
+He has a Diploma and a PhD in Computer Engineering from the National Technical University of Athens, and a MSc in Computer Science from the University of Southern California.
+In his research, he is interested in topics related to data science and data engineering.</p>
+
+### Ilias Kanellos
+<p align="justify"><img src="img/iliaskanellos.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Ilias Kanellos is a Scientific Associate at IMSI - "Athena" RC. He received his diploma in Electrical and Computer Engineering from the NTU of Athens in 2012. He then
+completed his PhD at the school of Electrical and Computer Engineering, NTU Athens, in 2020. He has been involved in several EU and national R&D projects and his 
+research interests include research analytics, scientific data management, cloud computing, bioinformatics, and data mining. He has co-authored 18 articles in Scientific
+Journals and Conferences.</p>
 
