--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -1,11 +1,10 @@
-## Description
+## Abstract
 
 <p align="justify">
-  Nowadays, the vast amount of existing published research works creates major obstacles regarding the traditional knowledge discovery 
-  required by common research processes and other relevant tasks. However, at the same time, the increased popularity of the Open Science movement, makes 
-  large amounts of scholarly metadata available through open Scholarly Knowledge Graphs (SKGs), paving the way for reliable research impact assessment 
-  processes, that can alleviate the aforementioned issue. The main objective of the tutorial is to inform and educate the audience about the opportunities 
-  and challenges that open SKGs create in the field of research impact assessment, presenting the respective state-of-the-art and highlighting common pitfalls.
+Networks (or interchangeably graphs) have been ubiquitous across the globe and within science and engineering: social networks, collaboration networks, protein-protein interaction networks, infrastructure networks, among many others. Machine learning on graphs, especially network representation learning, has shown remarkable performance in tasks related to graphs, such as node/graph classification, graph clustering, and link prediction. These tasks are closely related to the Web applications, especially social network analysis and recommendation systems. For example, node classification and graph clustering are widely used for studies on community detection, and link prediction plays a vital role in friend or item recommendation. Like performance, it is equally crucial for individuals to understand the behavior of machine learning models and be able to explain how these models arrive at a certain decision. Such needs have motivated many studies on interpretability in machine learning. Specifically, for social network analysis, we may need to know the reasons why certain users (or groups) are classified or clustered together by the machine learning models, or why a friend recommendation system considers some users similar so that they are recommended to connect with each other. Under such circumstances, an interpretable network representation is necessary and it should carry the graph information to a level understandable by humans. 
+
+In this tutorial, we will (1) define interpretability and go over its definitions within different contexts in studies of networks; (2) review and summarize various interpretable network representations; (3) discuss connections to network embedding, graph summarization, and network visualization methods; (4) discuss explainability in Graph Neural Networks, as such techniques are often perceived to have limited interpretability; and (5) highlight the open research problems and future research directions.
+The tutorial is designed for researchers, graduate students, and practitioners in areas such as graph mining, machine learning on graphs, and machine learning interpretability. Few prerequisites are required for The Web Conferenc participants to attend. 
 </p>
 
 ## Impact Assessment in SKGs
@@ -31,43 +30,39 @@
   for impact assessment. 
 </p>
 
-## Tutorial Material
+## Tutorial Outline
 
-1. Part A: <a href="">Introduction</a>
-  * History 
-  * Motivation and applications
-  * Open SKGs
-  * Multi-perspective impact assessment
-2. Part B: <a href="">Research impact assessment approaches</a>
-  * Background
-  * Classification of approaches
-  * Notable approaches
-  * Strengths and weaknesses
-3. Part C: <a href="">Aftermath</a>
-  * Demonstrating applications 
-  * Open research challenges 
-  * Conclusions 
+1. Introduction (5 mins)
+2. Interpretability in Network Settings (15 mins)
+  * Network Properties
+  * Spectral Properties
+  * Relationship Between a Network and its Subgraphs
+3. Interpretable Network Representations (30 mins)
+  * Network Embedding Methods 
+  * Graph Summarization Methods 
+  * Network Visualization
+4. Graph Neural Network and its Explainability (15 mins)
+5. Open Research Problems (10 mins)
+  * Future research direction
+6. Demo (10 mins)
+7. Q & A
 
 ## Video Teaser
 
-[![Impact Assessment Tutorial Teaser](https://img.youtube.com/vi/fq1VXLRs_A8/0.jpg)](https://www.youtube.com/watch?v=fq1VXLRs_A8)
+<!-- [![Impact Assessment Tutorial Teaser](https://img.youtube.com/vi/fq1VXLRs_A8/0.jpg)](https://www.youtube.com/watch?v=fq1VXLRs_A8) -->
 
 ## Presenters
 
-### Thanasis Vergoulis 
-<p align="justify"><img src="img/vergoulis.png" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/>Thanasis Vergoulis is a Scientific Associate at IMSI, Athena Research Center in Greece. He received his diploma in Computer Engineering and Informatics from the Univ. 
-of Patras and his PhD in Computer Science from NTU of Athens, under the supervision of Prof. Timos Sellis. He has been involved in several EU and national ICT projects 
-related to big data, scientific data management, open science, and linked data. His research interests also involve bioinformatics, text mining & information retrieval 
-for scientific publications, and research analytics. He has served as a member of the program or organizing committee for several CS conferences and as a reviewer for 
-several top-tier journals. Finally, he has been teaching courses in undergraduate and postgraduate level in academic institutions in Greece and Cyprus.</p>
+### Shengmin Jin 
+<p align="justify"><img src="img/vergoulis.png" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/>\noindent \textbf{Shengmin Jin} is a research associate of Computer and Information Science and Engineering at Syracuse University. His research interests include large scale graph mining and graph representation. His work has been published in data mining venues including TKDE, KDD, WSDM, ICDM, CIKM, etc. Shengmin has been a teaching assistant for the graduate courses including social media mining, data mining and algorithms at Syracuse University. Shengmin was the recipient of the 2016 Syracuse outstanding achievement award in graduate study. Before joining Syracuse University, he received the B.S. degree in Maths from Fudan University. More information can be found at [here](https://shengminjin.github.io/).</p>
 
-### Dimitris Sacharidis 
+### Danai Koutra 
 <p align="justify"><img src="img/dimsacharidis.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Dimitris Sacharidis is an assistant professor at the Web and Information Technologies lab at the Université Libre De Bruxelles (ULB). Prior to that he was an assistant 
 professor at the Technical University of Vienna, and a Marie Skłodowska Curie fellow at the “Athena” Research Center and at the Hong Kong University of Science and Technology. 
 He has a Diploma and a PhD in Computer Engineering from the National Technical University of Athens, and a MSc in Computer Science from the University of Southern California.
 In his research, he is interested in topics related to data science and data engineering.</p>
 
-### Ilias Kanellos
+### Reza Zafarani
 <p align="justify"><img src="img/iliaskanellos.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Ilias Kanellos is a Scientific Associate at IMSI - "Athena" RC. He received his diploma in Electrical and Computer Engineering from the NTU of Athens in 2012. He then
 completed his PhD at the school of Electrical and Computer Engineering, NTU Athens, in 2020. He has been involved in several EU and national R&D projects and his 
 research interests include research analytics, scientific data management, cloud computing, bioinformatics, and data mining. He has co-authored 18 articles in Scientific
