--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -10,20 +10,20 @@ The tutorial is designed for researchers, graduate students, and practitioners i
 
 ## Tutorial Outline
 
-1. Introduction (5 mins)
-2. Interpretability in Network Settings (15 mins)
+* 1. Introduction (5 mins)
+* 2. Interpretability in Network Settings (15 mins)
   * Network Properties
   * Spectral Properties
   * Relationship Between a Network and its Subgraphs
-3. Interpretable Network Representations (30 mins)
+* 3. Interpretable Network Representations (30 mins)
   * Network Embedding Methods 
   * Graph Summarization Methods 
   * Network Visualization
-4. Graph Neural Network and its Explainability (15 mins)
-5. Open Research Problems (10 mins)
+* 4. Graph Neural Network and its Explainability (15 mins)
+* 5. Open Research Problems (10 mins)
   * Future research direction
-6. Demo (10 mins)
-7. Q & A
+* 6. Demo (10 mins)
+* 7. Q & A
 
 ## Video Teaser
 
