--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -1,3 +1,14 @@
+---
+title: "A Probabilistic Cascading Failure Model for Dynamic Operating Conditions."
+collection: publications
+permalink: /publication/CascadingFailureModel
+excerpt: 'A cascading failure model that can quantify the impact of failed grid components on other components.'
+date: 2020-03-30
+venue: 'IEEE ACCESS'
+paperurl: 'http://shengminjin.github.io/files/CascadingFailureModel.pdf'
+citation: 'Ma, Rui, Shengmin Jin, Sara Eftekharnejad, Reza Zafarani, and Wolf Peter Jean Philippe. "A Probabilistic Cascading Failure Model for Dynamic Operating Conditions." IEEE Access 8 (2020): 61741-61753.'
+---
+
 ## Abstract
 
 <p align="justify">
