--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -38,17 +38,11 @@ The tutorial is designed for researchers, graduate students, and practitioners i
 ## Presenters
 
 ### Shengmin Jin 
-<p align="justify"><img src="img/vergoulis.png" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/>\noindent \textbf{Shengmin Jin} is a research associate of Computer and Information Science and Engineering at Syracuse University. His research interests include large scale graph mining and graph representation. His work has been published in data mining venues including TKDE, KDD, WSDM, ICDM, CIKM, etc. Shengmin has been a teaching assistant for the graduate courses including social media mining, data mining and algorithms at Syracuse University. Shengmin was the recipient of the 2016 Syracuse outstanding achievement award in graduate study. Before joining Syracuse University, he received the B.S. degree in Maths from Fudan University. More information can be found at [here](https://shengminjin.github.io/).</p>
+<p align="justify"><img src="img/vergoulis.png" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/>\noindent \textbf{Shengmin Jin} is a research associate of Computer and Information Science and Engineering at Syracuse University. His research interests include large scale graph mining and graph representation. His work has been published in data mining venues including TKDE, KDD, WSDM, ICDM, CIKM, etc. Shengmin has been a teaching assistant for the graduate courses including social media mining, data mining and algorithms at Syracuse University. Shengmin was the recipient of the 2016 Syracuse outstanding achievement award in graduate study. Before joining Syracuse University, he received the B.S. degree in Maths from Fudan University. More information can be found [here](https://shengminjin.github.io/).</p>
 
 ### Danai Koutra 
-<p align="justify"><img src="img/dimsacharidis.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Dimitris Sacharidis is an assistant professor at the Web and Information Technologies lab at the Université Libre De Bruxelles (ULB). Prior to that he was an assistant 
-professor at the Technical University of Vienna, and a Marie Skłodowska Curie fellow at the “Athena” Research Center and at the Hong Kong University of Science and Technology. 
-He has a Diploma and a PhD in Computer Engineering from the National Technical University of Athens, and a MSc in Computer Science from the University of Southern California.
-In his research, he is interested in topics related to data science and data engineering.</p>
+<p align="justify"><img src="img/dimsacharidis.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Danai Koutra is an Associate Director of the Michigan Institute for Data Science (MIDAS) and a Morris Wellman Associate Professor in Computer Science and Engineering at the University of Michigan, where she leads the Graph Exploration and Mining at Scale (GEMS) Lab. Her research focuses on practical and scalable methods for large-scale real networks, and her interests include graph summarization, graph representation learning, knowledge graph mining, similarity and alignment, and anomaly detection. She has won an NSF CAREER award, an ARO Young Investigator award, the 2020 SIGKDD Rising Star Award, research faculty awards from Google, Amazon, Facebook and Adobe, a Precision Health Investigator award, the 2016 ACM SIGKDD Dissertation award, and  an honorable mention for the SCS Doctoral Dissertation Award (CMU). She holds one `rate-1' patent on bipartite graph alignment, and has multiple papers in top data mining conferences, including 8 award-winning papers. She is the Secretary of the new SIAG on Data Science, an Associate Editor of ACM TKDD, a track co-chair for the `Social Network Analysis and Graph Algorithms' track at TheWebConf 2022, and has served multiple times in the organizing committees of all the major data mining conferences (e.g., ACM SIGKDD, ACM WSDM, SIAM SDM, ECML/PKDD, ACM CIKM, IEEE ICDM). She has also co-organized 7 tutorials and 6 workshops.</p>
 
 ### Reza Zafarani
-<p align="justify"><img src="img/iliaskanellos.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Ilias Kanellos is a Scientific Associate at IMSI - "Athena" RC. He received his diploma in Electrical and Computer Engineering from the NTU of Athens in 2012. He then
-completed his PhD at the school of Electrical and Computer Engineering, NTU Athens, in 2020. He has been involved in several EU and national R&D projects and his 
-research interests include research analytics, scientific data management, cloud computing, bioinformatics, and data mining. He has co-authored 18 articles in Scientific
-Journals and Conferences.</p>
+<p align="justify"><img src="img/iliaskanellos.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Reza Zafarani is an Assistant Professor at the department of electrical engineering and computer science at Syracuse University. His research interests are in Data Mining, Machine Learning, Social Media Mining, and Social Network Analysis. His research has been published at major academic venues, and highlighted in various scientific outlets. He is the principal author of "Social Media Mining: An Introduction", a textbook by Cambridge University Press. He is the recepient of the NSF CAREER award, the winner of the President's Award for Innovation and outstanding teaching award at Arizona State University. Reza has served on numerous program committees and/or organization committees of machine learning/data mining conferences. He is the current associate editor for SIGKDD explorations and Frontiers in Communication. More information can be found at [here](http://reza.zafarani.net/).</p>
 
