--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -38,7 +38,7 @@ The tutorial is designed for researchers, graduate students, and practitioners i
 ## Presenters
 
 ### Shengmin Jin 
-<p align="justify"><img src="img/vergoulis.png" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/>\noindent \textbf{Shengmin Jin} is a research associate of Computer and Information Science and Engineering at Syracuse University. His research interests include large scale graph mining and graph representation. His work has been published in data mining venues including TKDE, KDD, WSDM, ICDM, CIKM, etc. Shengmin has been a teaching assistant for the graduate courses including social media mining, data mining and algorithms at Syracuse University. Shengmin was the recipient of the 2016 Syracuse outstanding achievement award in graduate study. Before joining Syracuse University, he received the B.S. degree in Maths from Fudan University. More information can be found [here](https://shengminjin.github.io/).</p>
+<p align="justify"><img src="img/vergoulis.png" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Shengmin Jin is a research associate of Computer and Information Science and Engineering at Syracuse University. His research interests include large scale graph mining and graph representation. His work has been published in data mining venues including TKDE, KDD, WSDM, ICDM, CIKM, etc. Shengmin has been a teaching assistant for the graduate courses including social media mining, data mining and algorithms at Syracuse University. Shengmin was the recipient of the 2016 Syracuse outstanding achievement award in graduate study. Before joining Syracuse University, he received the B.S. degree in Maths from Fudan University. More information can be found [here](https://shengminjin.github.io/).</p>
 
 ### Danai Koutra 
 <p align="justify"><img src="img/dimsacharidis.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Danai Koutra is an Associate Director of the Michigan Institute for Data Science (MIDAS) and a Morris Wellman Associate Professor in Computer Science and Engineering at the University of Michigan, where she leads the Graph Exploration and Mining at Scale (GEMS) Lab. Her research focuses on practical and scalable methods for large-scale real networks, and her interests include graph summarization, graph representation learning, knowledge graph mining, similarity and alignment, and anomaly detection. She has won an NSF CAREER award, an ARO Young Investigator award, the 2020 SIGKDD Rising Star Award, research faculty awards from Google, Amazon, Facebook and Adobe, a Precision Health Investigator award, the 2016 ACM SIGKDD Dissertation award, and  an honorable mention for the SCS Doctoral Dissertation Award (CMU). She holds one 'rate-1' patent on bipartite graph alignment, and has multiple papers in top data mining conferences, including 8 award-winning papers. She is the Secretary of the new SIAG on Data Science, an Associate Editor of ACM TKDD, a track co-chair for the 'Social Network Analysis and Graph Algorithms' track at TheWebConf 2022, and has served multiple times in the organizing committees of all the major data mining conferences (e.g., ACM SIGKDD, ACM WSDM, SIAM SDM, ECML/PKDD, ACM CIKM, IEEE ICDM). She has also co-organized 7 tutorials and 6 workshops.</p>
