--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -34,7 +34,7 @@ The tutorial is designed for researchers, graduate students, and practitioners i
 
 ## Video Teaser
 
-<!-- [![Impact Assessment Tutorial Teaser](https://img.youtube.com/vi/fq1VXLRs_A8/0.jpg)](https://www.youtube.com/watch?v=fq1VXLRs_A8) -->
+[![Impact Assessment Tutorial Teaser]()](https://drive.google.com/file/d/1A1tZYEQIp8PqTad1rmqenKwu_LhBcU4I/view?usp=sharing)
 
 ## Presenters
 
