--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -34,7 +34,7 @@ The tutorial is designed for researchers, graduate students, and practitioners i
 
 ## Video Teaser
 
-[![Impact Assessment Tutorial Teaser]()](https://drive.google.com/file/d/1A1tZYEQIp8PqTad1rmqenKwu_LhBcU4I/view?usp=sharing)
+[![IGR Teaser](images/front.jpg)](https://drive.google.com/file/d/1A1tZYEQIp8PqTad1rmqenKwu_LhBcU4I/view?usp=sharing)
 
 ## Presenters
 
