--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -42,7 +42,7 @@ The tutorial is designed for researchers, graduate students, and practitioners i
 <p align="justify"><img src="images/shengmin.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Shengmin Jin is a research associate of Computer and Information Science and Engineering at Syracuse University. His research interests include large scale graph mining and graph representation. His work has been published in data mining venues including TKDE, KDD, WSDM, ICDM, CIKM, etc. Shengmin has been a teaching assistant for the graduate courses including social media mining, data mining and algorithms at Syracuse University. Shengmin was the recipient of the 2016 Syracuse outstanding achievement award in graduate study. Before joining Syracuse University, he received the B.S. degree in Maths from Fudan University. More information can be found [here](https://shengminjin.github.io/).</p>
 
 ### Danai Koutra 
-<p align="justify"><img src="images/danai.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Danai Koutra is an Associate Director of the Michigan Institute for Data Science (MIDAS) and a Morris Wellman Associate Professor in Computer Science and Engineering at the University of Michigan, where she leads the Graph Exploration and Mining at Scale (GEMS) Lab. Her research focuses on practical and scalable methods for large-scale real networks, and her interests include graph summarization, graph representation learning, knowledge graph mining, similarity and alignment, and anomaly detection. She has won an NSF CAREER award, an ARO Young Investigator award, the 2020 SIGKDD Rising Star Award, research faculty awards from Google, Amazon, Facebook and Adobe, a Precision Health Investigator award, the 2016 ACM SIGKDD Dissertation award, and  an honorable mention for the SCS Doctoral Dissertation Award (CMU). She holds one 'rate-1' patent on bipartite graph alignment, and has multiple papers in top data mining conferences, including 8 award-winning papers. She is the Secretary of the new SIAG on Data Science, an Associate Editor of ACM TKDD, a track co-chair for the 'Social Network Analysis and Graph Algorithms' track at TheWebConf 2022, and has served multiple times in the organizing committees of all the major data mining conferences (e.g., ACM SIGKDD, ACM WSDM, SIAM SDM, ECML/PKDD, ACM CIKM, IEEE ICDM). She has also co-organized 7 tutorials and 6 workshops.</p>
+<p align="justify"><img src="images/danai.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Danai Koutra is an Associate Director of the Michigan Institute for Data Science (MIDAS) and an Associate Professor in Computer Science and Engineering at the University of Michigan, where she leads the Graph Exploration and Mining at Scale (GEMS) Lab. She is also an Amazon Scholar. Her research focuses on practical and scalable methods for large-scale real networks, and her interests include graph summarization, graph representation learning, knowledge graph mining, similarity and alignment, and anomaly detection. She has won an NSF CAREER award, an ARO Young Investigator award, the 2020 SIGKDD Rising Star Award, research faculty awards from Google, Amazon, Facebook and Adobe, a Precision Health Investigator award, the 2016 ACM SIGKDD Dissertation award, and  an honorable mention for the SCS Doctoral Dissertation Award (CMU). She holds one 'rate-1' patent on bipartite graph alignment, and has multiple papers in top data mining conferences, including 8 award-winning papers. She is the Secretary of the new SIAG on Data Science, an Associate Editor of ACM TKDD, a track co-chair for the 'Social Network Analysis and Graph Algorithms' track at TheWebConf 2022, and has served multiple times in the organizing committees of all the major data mining conferences (e.g., ACM SIGKDD, ACM WSDM, SIAM SDM, ECML/PKDD, ACM CIKM, IEEE ICDM). She has also co-organized 7 tutorials and 6 workshops.</p>
 
 ### Reza Zafarani
 <p align="justify"><img src="images/reza.jpg" alt="hi" class="inline" align="left" style="width:130px; height:130px; margin: 5px;"/> Reza Zafarani is an Assistant Professor at the department of electrical engineering and computer science at Syracuse University. His research interests are in Data Mining, Machine Learning, Social Media Mining, and Social Network Analysis. His research has been published at major academic venues, and highlighted in various scientific outlets. He is the principal author of "Social Media Mining: An Introduction", a textbook by Cambridge University Press. He is the recepient of the NSF CAREER award, the winner of the President's Award for Innovation and outstanding teaching award at Arizona State University. Reza has served on numerous program committees and/or organization committees of machine learning/data mining conferences. He is the current associate editor for SIGKDD explorations and Frontiers in Communication. More information can be found at [here](http://reza.zafarani.net/).</p>
