--- a/_tutorials/WWW2022.md
+++ b/_tutorials/WWW2022.md
@@ -17,19 +17,17 @@ The tutorial is designed for researchers, graduate students, and practitioners i
 
 ## Tutorial Outline
 
-* Introduction (5 mins)
-* Interpretability in Network Settings (15 mins)
+* Introduction [slides](https://docs.google.com/presentation/d/1iUoT-BdkJ5LOY9aeG0KFeJcaErR9StZz/edit?usp=sharing&ouid=113555721675930919542&rtpof=true&sd=true)
+* Interpretability in Network Settings
   * Network Properties
   * Spectral Properties
   * Relationship Between a Network and its Subgraphs
-* Interpretable Network Representations (30 mins)
-  * Network Embedding Methods 
+* Interpretable Network Representations 
   * Graph Summarization Methods 
+  * Network Embedding Methods 
   * Network Visualization
-* Graph Neural Network and its Explainability (15 mins)
-* Open Research Problems (10 mins)
-  * Future research direction
-* Demo (10 mins)
+* Demo
+* Graph Neural Network and its Explainability 
 * Q & A
 
 ## Video Teaser
